--- a/src/components/BacklogViewModificationOptions/BacklogViewModificationOptions.module.css
+++ b/src/components/BacklogViewModificationOptions/BacklogViewModificationOptions.module.css
@@ -5,7 +5,7 @@
 #viewModificationOptions {
   margin: var(--height-header) -15px 0;
   border-bottom: 1px solid var(--border);
-  padding: 0 15px;
+  padding: 0 15px 15px;
   gap: 15px;
   display: flex;
   align-items: center;
