--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
 
 :root {
   --article: #313237;
-  --background: #f1f1f1;
+  --background: #f6f8fa;
   --background-box: #fffffff0;
   --background-header: #f5f4f4b8;
   --background-label: rgb(236, 236, 236);
