--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,6 +1,27 @@
+#closeButton {
+  display: none;
+}
+
 #input {
   display: none;
   height: 100%;
+}
+
+#inputContainer {
+  width: 100%;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  gap: 15px;
+}
+
+.open #closeButton {
+  display: flex;
+  background-color: transparent;
+  color: var(--text);
+  width: 24px;
+  height: 24px;
+  padding: 0;
 }
 
 .open #input {
@@ -57,22 +78,23 @@
 }
 
 #searchButton {
-  width: 40px;
+  width: 35px;
   justify-content: center;
   align-items: center;
   padding: 0;
-  height: 40px;
+  border-radius: 100%;
+  height: 35px;
   display: flex;
 }
 
 @media screen and (min-width: 720px) {
-  
+
   #input {
     display: flex;
     max-width: 500px;
   }
 
-  #searchButton {
+  .open #closeButton, #searchButton {
     display: none;
   }
 
