--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -26,7 +26,7 @@
 #options {
   margin: var(--height-header) -15px 0;
   border-bottom: 1px solid var(--border);
-  padding: 0 15px;
+  padding: 0 15px 15px;
   gap: 15px;
   display: flex;
   align-items: center;
