--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -40,7 +40,7 @@
   border-radius: 5px;
   padding: 5px;
   margin-top: 45px;
-  width: 100%;
+  width: calc(100% - 30px);
   max-width: 500px;
   border: 1px solid var(--border);
   box-sizing: border-box;
