--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -34,7 +34,7 @@
 }
 
 .open #resultContainer {
-  display: initial;
+  display: flex;
 }
 
 #resultContainer {
@@ -48,6 +48,16 @@
   border: 1px solid var(--border);
   box-sizing: border-box;
   display: none;
+  flex-direction: column;
+  gap: 5px;
+  max-height: 500px;
+  overflow-y: auto;
+}
+
+#resultContainer h1 {
+  font-size: 14px;
+  color: var(--text);
+  padding: 0 20px;
 }
 
 #resultContainer > section {
@@ -56,8 +66,13 @@
   gap: 5px;
 }
 
-#resultContainer > section > section {
-  padding: 5px;
+#resultContainer > section:first-of-type > h1 {
+  display: none;
+}
+
+#resultContainer > section:not(:first-of-type) {
+  border-top: 1px solid var(--border);
+  padding-top: 15px;
 }
 
 #resultContainer ul {
@@ -99,7 +114,7 @@
   }
 
   #resultContainer {
-    display: initial;
+    display: flex;
     max-width: 500px;
   }
 
