--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 header {
   display: flex;
   justify-content: space-between;
-  padding: 0 15px;
+  padding: 15px;
   height: var(--height-header);
   align-items: center;
   position: relative;
@@ -36,6 +36,11 @@ header {
   display: flex;
   align-items: center;
   gap: 15px;
+  height: 100%;
+}
+
+#left > section {
+  height: 100%;
 }
 
 #left a {
@@ -45,14 +50,18 @@ header {
   text-decoration: none;
 }
 
-#left > nav, #nameContainer {
+.mobileSearching > #left, .mobileSearching #accountButton, #nameContainer {
   display: none;
+}
+
+.mobileSearching > #right, .mobileSearching > #right > section, .mobileSearching > #right > section > section {
+  flex-grow: 1;
 }
 
 #right {
   display: flex;
   gap: 15px;
-  height: 40px;
+  height: 100%;
 }
 
 #right > section {
@@ -72,22 +81,6 @@ header {
 }
 
 @media screen and (min-width: 400px) {
-  
-  #left > nav {
-    display: flex;
-    gap: 15px;
-  }
-
-  #left > nav > a {
-    text-decoration: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: 0.15s;
-  }
-
-  #left > nav > a:not(.selected):hover {
-    background-color: #d9deed;
-  }
 
   .selected {
     background-color: var(--link-selected);
@@ -107,15 +100,18 @@ header {
     color: var(--text);
   }
 
+  .mobileSearching > #left, .mobileSearching #accountButton {
+    display: flex;
+  }
+
   #right {
     justify-content: space-between;
     flex-grow: 1;
   }
 
   #right > section, #right > section > section {
-    margin-right: calc(var(--left-container-width) / 2);
     flex-grow: 1;
-    justify-content: center;
+    justify-content: right;
   }
 
 }
