--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,15 +1,40 @@
+#closeButton {
+  display: none;
+}
+
 #input {
   display: none;
   height: 100%;
-  max-width: 500px;
+}
+
+#inputContainer {
+  width: 100%;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  gap: 15px;
+}
+
+.open #closeButton {
+  display: flex;
+  background-color: transparent;
+  color: var(--text);
+  width: 24px;
+  height: 24px;
+  padding: 0;
 }
 
 .open #input {
   display: flex;
+  flex-grow: 1;
 }
 
 .open #searchButton {
   display: none;
+}
+
+.open #resultContainer {
+  display: flex;
 }
 
 #resultContainer {
@@ -19,10 +44,20 @@
   border-radius: 5px;
   padding: 5px;
   margin-top: 45px;
-  width: 100%;
-  max-width: 500px;
+  width: calc(100% - 30px);
   border: 1px solid var(--border);
   box-sizing: border-box;
+  display: none;
+  flex-direction: column;
+  gap: 5px;
+  max-height: 500px;
+  overflow-y: auto;
+}
+
+#resultContainer h1 {
+  font-size: 14px;
+  color: var(--text);
+  padding: 0 20px;
 }
 
 #resultContainer > section {
@@ -31,8 +66,13 @@
   gap: 5px;
 }
 
-#resultContainer > section > section {
-  padding: 5px;
+#resultContainer > section:first-of-type > h1 {
+  display: none;
+}
+
+#resultContainer > section:not(:first-of-type) {
+  border-top: 1px solid var(--border);
+  padding-top: 15px;
 }
 
 #resultContainer ul {
@@ -57,21 +97,28 @@
 }
 
 #searchButton {
-  width: 40px;
+  width: 35px;
   justify-content: center;
   align-items: center;
   padding: 0;
-  height: 40px;
+  border-radius: 100%;
+  height: 35px;
   display: flex;
 }
 
 @media screen and (min-width: 720px) {
-  
+
   #input {
     display: flex;
+    max-width: 500px;
   }
 
-  #searchButton {
+  #resultContainer {
+    display: flex;
+    max-width: 500px;
+  }
+
+  .open #closeButton, #searchButton {
     display: none;
   }
 
