--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -41,10 +41,15 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  margin-top: 15px;
 }
 
-#projectListContainer > ul {
-  max-width: 1080px;
+#projectList {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  list-style-type: none;
+  margin: 0 auto;
   width: 100%;
-  margin: 15px auto;
+  max-width: 1080px;
 }
