--- a/src/components/HeaderOptions/HeaderOptions.module.css
+++ b/src/components/HeaderOptions/HeaderOptions.module.css
@@ -1,8 +1,4 @@
-#addIssueButton {
-  border: 1px solid var(--border);
-}
-
-#viewModificationOptions {
+#options {
   margin: var(--height-header) -15px 0;
   border-bottom: 1px solid var(--border);
   padding: 0 15px 15px;
@@ -14,12 +10,12 @@
   justify-content: space-between;
 }
 
-#viewModificationOptions > span {
+#options > span {
   display: flex;
   gap: 15px;
 }
 
-#viewModificationOptions button {
+#options button {
   display: flex;
   justify-content: center;
   align-items: center;
