Push v1.0.0 to production (#91)
* Add a search bar (#83)

* add search input

* start to add actions

* update result group

* update

* click button to open search on mobile

* Create search input design (#77)

* update header

* update color and padding

* make search bar take 100%

* add a close button

* fix padding

* test with demo task

* set up how results look

* Limit search results by query (#80)

* Filter actions by query

* remove unnecessary import

* Limit typos to one character

* Limit results to top four matches per category

* Add buttons to the search bar (#84)

* Add "Create project" button (#81)

* Add "Delete project" button (#85)

* Remove currentProject check

* Create new functions and add "Create task" button (#86)

* Add search bar button: "Delete task" (#87)

* First two

* Delete task by search bar

* Add search bar functionality: search for tasks by name (#88)

* filter results by task name

* stuff

* Simplify code

* simplify results

* Add search bar functionality: search for projects by name (#89)

* Hide search results on outside click (#90)

* Add functionality to delete projects (#92) (#93)

* Change "Completion" to "Acceptance"

* update deps

* Merge branch '40-add-functionality-to-delete-projects' of https://github.com/Makuwro/planzea into 40-add-functionality-to-delete-projects

* Create HeaderOptions comp

* create singlePixelBorder class

* Add delete button to project list

* update project list look

* tasks 2 and 3

* remove unnecessary imports

* add ProjectDeletionPopup

* Add project to cache

* remove unnecessary import

* partially fix currentProject

* Delete each project task

--- a/src/components/HeaderOptions/HeaderOptions.module.css
+++ b/src/components/HeaderOptions/HeaderOptions.module.css
@@ -1,11 +1,7 @@
-#addIssueButton {
-  border: 1px solid var(--border);
-}
-
-#viewModificationOptions {
+#options {
   margin: var(--height-header) -15px 0;
   border-bottom: 1px solid var(--border);
-  padding: 0 15px;
+  padding: 0 15px 15px;
   gap: 15px;
   display: flex;
   align-items: center;
@@ -14,12 +10,12 @@
   justify-content: space-between;
 }
 
-#viewModificationOptions > span {
+#options > span {
   display: flex;
   gap: 15px;
 }
 
-#viewModificationOptions button {
+#options button {
   display: flex;
   justify-content: center;
   align-items: center;
