--- a/src/components/ProjectListButton/ProjectListButton.module.css
+++ b/src/components/ProjectListButton/ProjectListButton.module.css
@@ -18,13 +18,17 @@
   cursor: initial;
 }
 
-.project:hover:active {
-  background-color: rgb(220, 220, 220);
+:global(.dark) .project:not(.selected):hover {
+  background-color: rgba(55, 55, 55, 0.14);
 }
 
 .project.selected {
   background-color: rgb(225, 225, 225);
   border-color: var(--border);
+}
+
+:global(.dark) .project.selected {
+  background-color: rgba(91, 91, 91, 0.14);
 }
 
 .project > span {
