--- a/src/components/TaskPopupSubTaskSection/TaskPopupSubTaskSection.module.css
+++ b/src/components/TaskPopupSubTaskSection/TaskPopupSubTaskSection.module.css
@@ -1,3 +1,18 @@
+.taskList {
+  box-shadow: var(--box-shadow-default);
+  padding: 15px;
+  border-radius: 5px;
+  list-style: none;
+}
+
+#taskLists {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin: 0;
+  padding: 0;
+}
+
 #tasks {
   padding: 0;
   margin: 16px 0 0;
