Rename task lists

--- a/src/components/TaskPopupSubTaskSection/TaskPopupSubTaskSection.module.css
+++ b/src/components/TaskPopupSubTaskSection/TaskPopupSubTaskSection.module.css
@@ -45,7 +45,11 @@
   text-decoration: none;
 }
 
-.taskList > section > section > button, #tasks li > button {
+.taskListOptions {
+  display: flex;
+}
+
+.taskListOptions > button, #tasks li > button {
   background-color: transparent;
   height: 100%;
   color: var(--text);
