--- a/src/components/SettingsPage/SettingsPage.module.css
+++ b/src/components/SettingsPage/SettingsPage.module.css
@@ -60,6 +60,11 @@
     display: flex;
   }
 
+  .navItemText > span {
+    
+    filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.256));
+  }
+
   .navItem :global(.material-icons) {
     color: var(--text);
   }
