--- a/src/components/SettingsPageOption/SettingsPageOption.module.css
+++ b/src/components/SettingsPageOption/SettingsPageOption.module.css
@@ -29,4 +29,7 @@
   padding: 15px;
   border-top: 1px solid var(--border);
   box-sizing: border-box;
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
 }
