--- a/src/global.css
+++ b/src/global.css
@@ -186,3 +186,11 @@ h1 {
   display: flex;
   flex-direction: column;
 }
+
+.statusIcon {
+  border-radius: 100%;
+  height: 15px;
+  width: 15px;
+  padding: 0;
+  flex-shrink: 0;
+}
