--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -91,6 +91,10 @@
   border-radius: 5px;
 }
 
+#resultContainer button[disabled] {
+  background-color: transparent;
+}
+
 #resultContainer button:hover {
   box-shadow: var(--box-shadow-default);
 }
