--- a/src/components/TaskListSection/TaskListSection.module.css
+++ b/src/components/TaskListSection/TaskListSection.module.css
@@ -24,7 +24,7 @@
 
 .tasks {
   padding: 0;
-  margin: 16px 0 0;
+  margin: 0;
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -53,6 +53,16 @@
   border-radius: 5px;
   font-weight: 400;
   flex-shrink: 0;
+}
+
+.taskList {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.taskList label {
+  font-weight: 500;
 }
 
 .taskList.grabbing {
