--- a/src/components/SettingsPageOption/SettingsPageOption.module.css
+++ b/src/components/SettingsPageOption/SettingsPageOption.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
 }
 
-.labelBaseInfo > button {
+.options > button {
   padding: 0;
   background-color: transparent;
   color: var(--color-text);
