Add functionality to create custom task statuses (#101)
* add LabelManagementPage

* update

* use cacheclient instead of app state

* update

* fix nav

* add status page

* add transition

* add statuses to api

* fix status problems

* upgrade project statuses

* view task status

* update marker

* sort statuses

* transparent background

* add status color

* Change status in task viewer

* update

* create status popup

* add colors

* Show status colors

* convert section to FormSection

* Change project and task status IDs

* change tag from form

* Delete statuses

* use statusDelete

* add console.logs

* update

* save status update

* fix errors

* make the task list look nicer

* reduce spacing

* Move creation button to bottom

* Move status positions up and down

* Remove unneeded stuff

--- a/src/components/SettingsPage/SettingsPage.module.css
+++ b/src/components/SettingsPage/SettingsPage.module.css
@@ -1,49 +1,120 @@
-#list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-#list, #main, .labelDescription, #listContainer {
+#main {
+  box-sizing: border-box;
+  align-items: center;
   display: flex;
   flex-direction: column;
   gap: 15px;
-}
-
-#list > li {
-  border-radius: 5px;
-  padding: 15px;
-  box-shadow: var(--box-shadow-default);
-  position: relative;
-  display: flex;
-  flex-direction: column;
   overflow: hidden;
-  gap: 15px;
 }
 
-#info {
+#page {
+  flex-grow: 1;
+  justify-content: center;
   display: flex;
-  flex-direction: column;
+  height: 100%;
+  overflow-y: auto;
+}
+
+#page > section {
+  padding: 0 15px 15px;
+}
+
+#nav {
+  display: flex;
+  gap: 15px;
+  padding: 0 15px;
+  justify-content: left;
+  box-sizing: border-box;
+  width: 100%;
+  position: relative;
+  z-index: 2;
+}
+
+.navItem {
+  display: flex;
+  align-items: center;
+  color: var(--text);
+  text-decoration: none;
+  flex-direction: column-reverse;
   gap: 5px;
 }
 
-.labelActions {
-  display: flex;
-  gap: 15px;
+.navItem:hover {
+  filter: brightness(0.92);
 }
 
-#main {
-  padding: 15px;
-  box-sizing: border-box;
-  overflow-y: auto;
-  height: calc(100% - var(--height-header));
+.navItem.selected {
+  filter: brightness(0.9);
+  color: var(--text-important);
+}
+
+.navItemText {
+  display: flex;
+  gap: 10px;
   align-items: center;
 }
 
-#content {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  max-width: 1080px;
-  width: 100%;
+.navItemText > span {
+  filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.256));
+}
+
+.marker {
+  border-radius: 5px;
+  background-color: var(--link);
+  opacity: 0;
+  transition: 0.3s;
+  width: 0px;
+  height: 3px;
+}
+
+.navItem.selected > .marker {
+  opacity: 1;
+  width: 15px;
+}
+
+@media screen and (min-width: 720px) {
+  
+  #main {
+    flex-direction: row;
+    align-items: start;
+  }
+
+  #nav {
+    flex-direction: column;
+    justify-content: initial;
+    max-width: 275px;
+    padding: 0 15px;
+    gap: 10px;
+  }
+  
+  .marker {
+    position: fixed;
+    margin-left: -10px;
+    box-shadow: var(--box-shadow-default);
+    width: 3px;
+    height: 0px;
+  }
+
+  .navItem {
+    border-radius: 5px;
+    padding: 5px 10px;
+    background-color: var(--background);
+    transition: 0.1s;
+    gap: 0;
+    flex-direction: row;
+  }
+
+  .navItem.selected > .marker {
+    height: 15px;
+    width: 3px;
+  }
+
+  .navItem :global(.material-icons) {
+    color: var(--text);
+  }
+  
+  .navItem:hover {
+    box-shadow: var(--box-shadow-default);
+  }
+
 }
