--- a/src/components/SettingsPageOption/SettingsPageOption.module.css
+++ b/src/components/SettingsPageOption/SettingsPageOption.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
 }
 
-.labelBaseInfo > button {
+.options > button {
   padding: 0;
   background-color: transparent;
   color: var(--color-text);
@@ -29,4 +29,7 @@
   padding: 15px;
   border-top: 1px solid var(--border);
   box-sizing: border-box;
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
 }
