--- a/src/components/Backlog/Backlog.module.css
+++ b/src/components/Backlog/Backlog.module.css
@@ -2,7 +2,7 @@
   padding: 0 15px;
   position: relative;
   top: calc(0px - var(--height-header));
-  height: 100%;
+  height: calc(100% - var(--height-header));
   display: flex;
   flex-direction: column;
   z-index: 0;
@@ -36,4 +36,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 15px;
+  overflow-y: auto;
+  height: 100%;
+  flex-shrink: 1;
 }
