Change margin to padding

--- a/src/components/Backlog/Backlog.module.css
+++ b/src/components/Backlog/Backlog.module.css
@@ -35,7 +35,7 @@
 #taskListContainer {
   display: flex;
   flex-direction: column;
-  margin-top: 15px;
+  padding-top: 15px;
   overflow-y: auto;
   height: 100%;
   flex-shrink: 1;
