--- a/src/components/HeaderOptions/HeaderOptions.module.css
+++ b/src/components/HeaderOptions/HeaderOptions.module.css
@@ -8,6 +8,7 @@
   height: var(--height-header);
   z-index: 1;
   justify-content: space-between;
+  background-color: var(--background-header);
 }
 
 #options > span {
@@ -21,7 +22,7 @@
   align-items: center;
   border-radius: 100%;
   height: 30px;
-  background-color: var(--background);
+  background-color: var(--background-header);
   color: var(--text);
   width: 30px;
   cursor: initial;
