--- a/src/global.css
+++ b/src/global.css
@@ -39,9 +39,9 @@
 }
 
 .dark {
-  --background: #0c0c0c;
+  --background: #131314;
   --background-box: #1c1c1c;
-  --background-header: #1b1c1be8;
+  --background-header: #0c0c0c;
   --background-info: #1f1f1f;
   --background-input: #171717;
   --background-input-header: #2e2f2e;
